# eu-vat-rates-data-python

./: README.md  pyproject.toml
.github/workflows/: test.yml  update.yml
src/eu_vat_rates_data/: __init__.py  eu_vat_rates_data.json
tests/: test_smoke.py
